[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.flit.module]
name = "dbcv"

[project]
name = "dbcv"
version = "0.1.0"
description = "Memory Efficient - Fast implementation of DBCV metric."
authors = [
    {name="JotaKas", email= "jonas.kasmanas@ufz.de"}
]

requires-python = ">=3.9"

dependencies = [
    "joblib==1.4.2",
    "mpmath==1.3.0",
    "numpy==1.26.0",
    "pandas==2.2.2",
    "pip==24.0",
    "psutil==6.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "scikit-learn==1.5.1",
    "scipy==1.13.1",
    "six==1.16.0",
    "threadpoolctl==3.5.0",
    "tqdm==4.66.4",
    "tzdata==2024.1"
]

[project.optional-dependencies]
tests = [
    "matplotlib == 3.7.2",
    "tqdm == 4.66.1",
]
